Fix editor z-index

--- a/src/components/RichTextEditor/index.scss
+++ b/src/components/RichTextEditor/index.scss
@@ -58,6 +58,7 @@
   }
 
   .toastui-editor-defaultUI {
+    z-index: 0;
     border-color: color('gray-60');
     border-radius: 0;
   }
